# Streamlit-MultiChat

./: .Dockerignore  .env.sample  .gitignore  Dockerfile  Makefile  README.md  Z_multichat.py  Z_multichat_Auth.py  config.py  pyproject.toml  requirements.txt
.github/workflows/: SliDev_CICD.yml  Streamlit_GHA_MultiArch.yml  streamlit_GH_Actions.yml
.streamlit/: secrets_sample.toml
Streamlit_Pages/: Auth_functions.py  Readme.md  Streamlit_Anthropic.py  Streamlit_Ollama.py  Streamlit_OpenAI.py  Streamlit_ScrapeGraph.py  Streamlit_YT_Groq copy.py  Streamlit_YT_Groq.py  Streamlit_groq.py
Z_DeployMe/: Docker-Compose.yml  Readme.md  requirements-output.txt
Z_Tests/: .env.sample  Chroma_DB.py  Docker-Compose.yml  Dockerfile  Readme.md  Z_API_Models_check.ipynb  Z_multichat.py  groq_yt_summarizer.py  main_gemini.py  ollama_chatbot.py  requirements_test.txt  streamlit_anthropic.py  streamlit_anthropic2.py  streamlit_app_openai.py
Z_Tests/AnthropicAPI/: anthropic_api_test.py  anthropic_available_models.py  claude_function_call.py  readme.md  requirements.txt
Z_Tests/Auth_sqlite/: explore_sqlite.py  readme.md  streamlit_sql_auth.py  streamlit_sql_signINUP.py
Z_Tests/FlaskAPI/: flask_openai.py  readme.md  requirements.txt
Z_Tests/GPT4all/: readme.md
Z_Tests/GrokAPI/: grok_calls.ipynb  readme.md
Z_Tests_Chat_with_DBs/: .gitignore  README.md  house_reco_pandasai.py  properties.csv  requirements.txt  sample.py
docs/: 404.html  _redirects  index.html
helpers/: llm_helper.py
slidev/: .gitignore  README.md  package-lock.json  package.json  slides.md
(+604 files in other folders)
