[project]
name = "StreamlitMultichat"
version = "1.2"
description = "Chat with differents LLMs via Streamlit UI"
readme = "README.md"
requires-python = ">=3.10.12"
dependencies = [
    "ollama==0.2.1",
    "openai==1.57.4",
    "groq==0.9.0",
    "anthropic==0.28.1",
    "streamlit==1.37.0",
    "scrapegraphai==1.11.3",
    "nest-asyncio==1.6.0",
    "playwright==1.45.0",
    "streamlit-authenticator==0.1.5",
]